Add tests that fail because off openapi
