# spring-test/src/main/java/org/example/controller/ApiController.java
@@ -1,9 +1,8 @@
 package org.example.controller;
 
+import jakarta.websocket.server.PathParam;
 import lombok.extern.slf4j.Slf4j;
-import org.example.dto.Order;
 import org.example.dto.OrderInput;
-import org.example.dto.Product;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -13,29 +12,20 @@ public class ApiController {
 
     @GetMapping("/users")
     public ResponseEntity<String> getAllUsers() {
-//        return ResponseEntity.ok(List.of(
-//                User.builder()
-//                        .email("some@craftcode.be")
-//                        .name("CraftCode")
-//                        .id(1)
-//                        .build()
-//        ));
-        return ResponseEntity.ok("[{\"id\":1,\"name\":\"CraftCode\"}]");
+        return ResponseEntity.ok("[{\"id\":1,\"name\":\"CraftCode\",\"email\":\"some@craftcode.be\"}]");
     }
 
-    @GetMapping("/products/{id}")
-    public ResponseEntity<Product> getProductById(@PathVariable int id) {
+    @GetMapping(value = "/products/{id}", produces = "application/json")
+    public ResponseEntity<String> getProductById(@PathVariable int id) {
         // Implement logic to get a product by ID
-        return ResponseEntity.ok(Product.builder()
-                .build());
+        return ResponseEntity.ok("{\"id\":1,\"name\":\"Product A\",\"price\":10.0}");
     }
 
-    @PostMapping("/orders")
-    public ResponseEntity<Order> createOrder(@RequestBody OrderInput orderInput) {
+    @PostMapping(value = "/orders", consumes = "application/json")
+    public ResponseEntity<String> createOrder(@PathParam("userId") int userId, @PathParam("productId") int productId, @PathParam("quantity") int quantity) {
         // Implement logic to create a new order
         return ResponseEntity.status(201).body(
-                Order.builder()
-                        .build()
+                "{\"id\":1,\"userId\":1,\"productId\":1,\"quantity\":2,\"totalAmount\":20.0}"
         );
     }
 }
